--- a/musiq/src/index.css
+++ b/musiq/src/index.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=K2D');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'K2D', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("../src/img/what-the-hex.png");
 }
 
 code {
